<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    tools:context="com.catokg.openweather.MainActivity">

    <EditText
        android:id="@+id/edit_ZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/enter_zip_code"
        android:inputType="number"/>

    <Button
        android:id="@+id/button_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_whether"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/main" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/temp" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/country" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/location" />
</LinearLayout>